5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4180/executions/1594_2043.log
== TEST (2019-04-04 16:56:26) 
-- CODE:
a = float(input('nota1: '))
b = float(input('nota2: '))
c = float(input('nota3: '))
d = float(input('nota4: '))

mediapndrd = (a*1+b*3+c*3+d*4)
resultado = mediapndrd/10
print(resultado)
-- OUTPUT:
9.05
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:56:28) 
-- CODE:
a = float(input('nota1: '))
b = float(input('nota2: '))
c = float(input('nota3: '))
d = float(input('nota4: '))

mediapndrd = (a*1+b*3+c*3+d*4)
resultado = mediapndrd/10
print(resultado)
-- EXECUTION TIME:
0.13584
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
9.05
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.7
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
8.626000000000001
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:56:30) 
-- CODE:
a = float(input('nota1: '))
b = float(input('nota2: '))
c = float(input('nota3: '))
d = float(input('nota4: '))

mediapndrd = (a*1+b*3+c*3+d*4)
resultado = mediapndrd/10
print(resultado)
-- OUTPUT:
9.05
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:56:44) 
-- CODE:
a = float(input('nota1: '))
b = float(input('nota2: '))
c = float(input('nota3: '))
d = float(input('nota4: '))

mediapndrd = (a*1+b*3+c*3+d*4)
resultado = mediapndrd/10
print(resultado)
-- OUTPUT:
9.05
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:57:12) 
-- CODE:
a = float(input('nota1: '))
b = float(input('nota2: '))
c = float(input('nota3: '))
d = float(input('nota4: '))

mediapndrd = (a*1+b*3+c*3+d*4)
resultado = mediapndrd/10
print(resultado)
-- EXECUTION TIME:
0.150584
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
9.05
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.7
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
8.626000000000001
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:57:14) 
-- CODE:
a = float(input('nota1: '))
b = float(input('nota2: '))
c = float(input('nota3: '))
d = float(input('nota4: '))

mediapndrd = (a*1+b*3+c*3+d*4)
resultado = mediapndrd/10
print(resultado)
-- OUTPUT:
9.05
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:57:35) 
-- CODE:
a = float(input('nota1: '))
b = float(input('nota2: '))
c = float(input('nota3: '))
d = float(input('nota4: '))

mediapndrd = (a*1+b*3+c*3+d*4)
resultado = mediapndrd/10
print(round(resultado, 2))
-- OUTPUT:
9.05
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:57:38) 
-- CODE:
a = float(input('nota1: '))
b = float(input('nota2: '))
c = float(input('nota3: '))
d = float(input('nota4: '))

mediapndrd = (a*1+b*3+c*3+d*4)
resultado = mediapndrd/10
print(round(resultado, 2))
-- EXECUTION TIME:
0.137112
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
9.05
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.7
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
8.63
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:57:38) 
-- CODE:
a = float(input('nota1: '))
b = float(input('nota2: '))
c = float(input('nota3: '))
d = float(input('nota4: '))

mediapndrd = (a*1+b*3+c*3+d*4)
resultado = mediapndrd/10
print(round(resultado, 2))
-- OUTPUT:
9.05
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:57:39) 
-- CODE:
a = float(input('nota1: '))
b = float(input('nota2: '))
c = float(input('nota3: '))
d = float(input('nota4: '))

mediapndrd = (a*1+b*3+c*3+d*4)
resultado = mediapndrd/10
print(round(resultado, 2))
-- EXECUTION TIME:
0.201738
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
9.05
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.7
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
8.63
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:57:44) 
-- CODE:
a = float(input('nota1: '))
b = float(input('nota2: '))
c = float(input('nota3: '))
d = float(input('nota4: '))

mediapndrd = (a*1+b*3+c*3+d*4)
resultado = mediapndrd/10
print(round(resultado, 2))
-- OUTPUT:
9.05
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:57:53) 
-- CODE:
a = float(input('nota1: '))
b = float(input('nota2: '))
c = float(input('nota3: '))
d = float(input('nota4: '))

mediapndrd = (a*1+b*3+c*3+d*4)
resultado = mediapndrd/10
print(round(resultado, 2))
-- OUTPUT:
9.05
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:57:56) 
-- CODE:
a = float(input('nota1: '))
b = float(input('nota2: '))
c = float(input('nota3: '))
d = float(input('nota4: '))

mediapndrd = (a*1+b*3+c*3+d*4)
resultado = mediapndrd/10
print(round(resultado, 2))
-- EXECUTION TIME:
0.18761
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
9.05
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.7
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
8.63
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:58:11) 
-- CODE:
a = float(input('nota1: '))
b = float(input('nota2: '))
c = float(input('nota3: '))
d = float(input('nota4: '))

mediapndrd = (a*1+b*3+c*3+d*4)
resultado = (mediapndrd/10)
print(round(resultado, 2))
-- EXECUTION TIME:
0.203816
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
9.05
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.7
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
8.63
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:58:12) 
-- CODE:
a = float(input('nota1: '))
b = float(input('nota2: '))
c = float(input('nota3: '))
d = float(input('nota4: '))

mediapndrd = (a*1+b*3+c*3+d*4)
resultado = (mediapndrd/10)
print(round(resultado, 2))
-- OUTPUT:
9.05
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:58:27) 
-- CODE:
a = float(input('nota1: '))
b = float(input('nota2: '))
c = float(input('nota3: '))
d = float(input('nota4: '))

mediapndrd = (a*1+b*3+c*3+d*4)
resultado = (mediapndrd/10)
print(round(resultado, 2))
-- OUTPUT:
9.05
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:59:13) 
-- CODE:
a = int(input('nota1: '))
b = int(input('nota2: '))
c = int(input('nota3: '))
d = int(input('nota4: '))

mediapndrd = (a*1+b*3+c*3+d*4)
resultado = (mediapndrd/10)
print(round(resultado, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b = int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:59:23) 
-- CODE:
a = int(input('nota1: '))
b = int(input('nota2: '))
c = int(input('nota3: '))
d = int(input('nota4: '))

mediapndrd = (a*1+b*3+c*3+d*4)
resultado = (mediapndrd/10)
print(round(resultado, 2))
-- EXECUTION TIME:
0.176525
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2043/main.py", line 2, in <module>
    b = int(input())
ValueError: invalid literal for int() with base 10: '8.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:59:25) 
-- CODE:
a = int(input('nota1: '))
b = int(input('nota2: '))
c = int(input('nota3: '))
d = int(input('nota4: '))

mediapndrd = (a*1+b*3+c*3+d*4)
resultado = (mediapndrd/10)
print(round(resultado, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b = int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 17:01:15) 
-- CODE:
a = int(input('nota1: '))
b = int(input('nota2: '))
c = int(input('nota3: '))
d = int(input('nota4: '))

mediapndrd = (a*1+b*3+c*3+d*4/10)
print(round(resultado, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b = int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 17:01:19) 
-- CODE:
a = int(input('nota1: '))
b = int(input('nota2: '))
c = int(input('nota3: '))
d = int(input('nota4: '))

mediapndrd = (a*1+b*3+c*3+d*4/10)
print(round(resultado, 2))
-- EXECUTION TIME:
0.142219
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2043/main.py", line 2, in <module>
    b = int(input())
ValueError: invalid literal for int() with base 10: '8.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 17:01:20) 
-- CODE:
a = int(input('nota1: '))
b = int(input('nota2: '))
c = int(input('nota3: '))
d = int(input('nota4: '))

mediapndrd = (a*1+b*3+c*3+d*4/10)
print(round(resultado, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b = int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 17:01:51) 
-- CODE:
a = int(input('nota1: '))
b = int(input('nota2: '))
c = int(input('nota3: '))
d = int(input('nota4: '))

mediapndrd = (a*1+b*3+c*3+d*4)/10
print(round(resultado, 2))
-- EXECUTION TIME:
0.175684
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2043/main.py", line 2, in <module>
    b = int(input('nota2: '))
ValueError: invalid literal for int() with base 10: '8.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 17:01:52) 
-- CODE:
a = int(input('nota1: '))
b = int(input('nota2: '))
c = int(input('nota3: '))
d = int(input('nota4: '))

mediapndrd = (a*1+b*3+c*3+d*4)/10
print(round(resultado, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b = int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 17:14:55) 
-- CODE:
a = int(input('nota1: '))
b = int(input('nota2: '))
c = int(input('nota3: '))
d = int(input('nota4: '))

mediapndrd = (a*1+b*3+c*3+d*4)/10
print(round(resultado, 2))
-- EXECUTION TIME:
0.160412
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2043/main.py", line 2, in <module>
    b = int(input())
ValueError: invalid literal for int() with base 10: '8.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 17:15:21) 
-- CODE:
a = int(input('nota1: '))
b = int(input('nota2: '))
c = int(input('nota3: '))
d = int(input('nota4: '))

mediapndrd = (a*1+b*2+c*3+d*4)/10
print(round(resultado, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b = int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 17:15:23) 
-- CODE:
a = int(input('nota1: '))
b = int(input('nota2: '))
c = int(input('nota3: '))
d = int(input('nota4: '))

mediapndrd = (a*1+b*2+c*3+d*4)/10
print(round(resultado, 2))
-- EXECUTION TIME:
0.199782
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2043/main.py", line 2, in <module>
    b = int(input())
ValueError: invalid literal for int() with base 10: '8.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 17:15:38) 
-- CODE:
a = int(input('nota1: '))
b = int(input('nota2: '))
c = int(input('nota3: '))
d = int(input('nota4: '))

mediapndrd = (a*1+b*2+c*3+d*4/10)
print(round(resultado, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b = int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 17:16:01) 
-- CODE:
a = int(input('nota1: '))
b = int(input('nota2: '))
c = int(input('nota3: '))
d = int(input('nota4: '))

mediapndrd = (a*1+b*2+c*3+d*4/10)
print(round(mediapndrd, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b = int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 17:16:02) 
-- CODE:
a = int(input('nota1: '))
b = int(input('nota2: '))
c = int(input('nota3: '))
d = int(input('nota4: '))

mediapndrd = (a*1+b*2+c*3+d*4/10)
print(round(mediapndrd, 2))
-- EXECUTION TIME:
0.141863
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2043/main.py", line 2, in <module>
    b = int(input())
ValueError: invalid literal for int() with base 10: '8.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 17:16:05) 
-- CODE:
a = int(input('nota1: '))
b = int(input('nota2: '))
c = int(input('nota3: '))
d = int(input('nota4: '))

mediapndrd = (a*1+b*2+c*3+d*4/10)
print(round(mediapndrd, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b = int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 17:16:51) 
-- CODE:
a = float(input('nota1: '))
b = float(input('nota2: '))
c = float(input('nota3: '))
d = float(input('nota4: '))

mediapndrd = (a*1+b*2+c*3+d*4/10)
print(round(mediapndrd, 2))
-- EXECUTION TIME:
0.180101
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
49.6
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
nota1: nota2: nota3: nota4: 44.8
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
nota1: nota2: nota3: nota4: 47.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 17:16:52) 
-- CODE:
a = float(input('nota1: '))
b = float(input('nota2: '))
c = float(input('nota3: '))
d = float(input('nota4: '))

mediapndrd = (a*1+b*2+c*3+d*4/10)
print(round(mediapndrd, 2))
-- OUTPUT:
49.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 17:17:07) 
-- CODE:
a = float(input('nota1: '))
b = float(input('nota2: '))
c = float(input('nota3: '))
d = float(input('nota4: '))

mediapndrd = (a*1+b*2+c*3+d*4/100)
print(round(mediapndrd, 2))
-- EXECUTION TIME:
0.159329
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
46.36
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
42.28
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
43.76
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 17:17:08) 
-- CODE:
a = float(input('nota1: '))
b = float(input('nota2: '))
c = float(input('nota3: '))
d = float(input('nota4: '))

mediapndrd = (a*1+b*2+c*3+d*4/100)
print(round(mediapndrd, 2))
-- EXECUTION TIME:
0.214793
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
46.36
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
42.28
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
43.76
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 17:17:09) 
-- CODE:
a = float(input('nota1: '))
b = float(input('nota2: '))
c = float(input('nota3: '))
d = float(input('nota4: '))

mediapndrd = (a*1+b*2+c*3+d*4/100)
print(round(mediapndrd, 2))
-- OUTPUT:
46.36
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 17:19:12) 
-- CODE:
a = float(input('nota1: '))
b = float(input('nota2: '))
c = float(input('nota3: '))
d = float(input('nota4: '))

mediapndrd = (a*1+b*2+c*3+d*4/100)
print(round(mediapndrd, 2))
-- OUTPUT:
46.36
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 09:23:40) 
-- CODE:
a = float(input('nota1: '))
b = float(input('nota2: '))
c = float(input('nota3: '))
d = float(input('nota4: '))

mediapndrd = (a*1+b*2+c*3+d*4/100)
print(round(mediapndrd, 2))
-- OUTPUT:
46.36
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 09:25:32) 
-- CODE:
a = float(input('nota1: '))
b = float(input('nota2: '))
c = float(input('nota3: '))
d = float(input('nota4: '))

mediapndrd = (a*1+b*2+c*3+d*4/1+2+3+4)
print(round(mediapndrd, 2))
-- EXECUTION TIME:
0.136955
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
91.0
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
79.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
88.36
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 09:25:33) 
-- CODE:
a = float(input('nota1: '))
b = float(input('nota2: '))
c = float(input('nota3: '))
d = float(input('nota4: '))

mediapndrd = (a*1+b*2+c*3+d*4/1+2+3+4)
print(round(mediapndrd, 2))
-- OUTPUT:
91.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 09:33:08) 
-- CODE:
a = float(input('nota1: '))
b = float(input('nota2: '))
c = float(input('nota3: '))
d = float(input('nota4: '))

valorA = (a*1+b*2+c*3+d*4)
valorB = (valorA/10)
print(round(mediapndrd, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(mediapndrd, 2))
NameError: name 'mediapndrd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 09:33:29) 
-- CODE:
a = float(input('nota1: '))
b = float(input('nota2: '))
c = float(input('nota3: '))
d = float(input('nota4: '))

valorA = (a*1+b*2+c*3+d*4)
valorB = (valorA/10)
print(round(valorB, 2))
-- EXECUTION TIME:
0.224351
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
